kubernetes/argocd/yml/00-monitoring-mtls.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: monitoring
spec:
  mtls:
    mode: PERMISSIVE
