kubernetes/argocd/yml/argocd-server-access.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "alexargocd.snowse.io"
    - name: monitoring
      port: 80
      protocol: HTTP
      hostname: "alexmonitoring.snowse.io"
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
  hostnames:
    - "alexargocd.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: argocd
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: argocd-policy
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: argocd-server
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["cloudflared"]
